--- a/pages/Novedades.html
+++ b/pages/Novedades.html
@@ -7,9 +7,11 @@
     <meta name="description" content="En La Casa del Mate, somos tu principal fuente de insumos y accesorios para el mate. Descubre la rica tradición y sabor de esta emblemática bebida sudamericana con nuestra amplia selección de productos de alta calidad y la hospitalidad de una auténtica casa de mate.">
     <meta name="keywords" content="mate, argentina, uruguay,termo,yerba, bombilla, canarias, baldos, verde flor, taragui, rosamonte, playadito, costumbre, campo">
     <title>LA CASA DEL MATE 🧉</title>
-    <link rel="shotcurt icon" href="../recursos/mate.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="shotcurt icon" href="recursos/mate.png"  type="image/x-icon">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
@@ -49,14 +51,14 @@
 
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="row align-items-center g-lg-5 py-5">
-            <div class="col-lg-7 text-center text-lg-start">
+            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-lg-7 text-center text-lg-start">
                 <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-5">Ya tenemos disponible nuestro newsletter</h1>
-                <p class="col-lg-10 fs-4">Si estás interesado en recibir por correo electrónico nuestras novedades, la
+                <p class="col-lg-10 fs-4 m-auto mb-5">Si estás interesado en recibir por correo electrónico nuestras novedades, la
                     información sobre nuestros productos y promociones, no dejes de suscribirte a nuestro boletín.
                     Puedes hacerlo ingresando tus datos a continuación:</p>
             </div>
-            <div class="col-md-10 mx-auto col-lg-5">
-                <form class="p-4 p-md-5 border rounded-3 bg-body-tertiary">
+            <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-md-10 mx-auto col-lg-5">
+                <form class="cuadroForm p-4 p-md-5 rounded-3">
                     <div class="form-floating mb-3">
                         <input type="name" class="form-control" id="nameAndLastname" placeholder="Nombre y apellido">
                         <label for="nameAndLastname"> Nombre y apellido </label>
@@ -92,6 +94,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
