--- a/pages/Productos.html
+++ b/pages/Productos.html
@@ -6,9 +6,11 @@
     <meta name="description" content="En La Casa del Mate, somos tu principal fuente de insumos y accesorios para el mate. Descubre la rica tradición y sabor de esta emblemática bebida sudamericana con nuestra amplia selección de productos de alta calidad y la hospitalidad de una auténtica casa de mate.">
     <meta name="keywords" content="mate, argentina, uruguay,termo,yerba, bombilla, canarias, baldos, verde flor, taragui, rosamonte, playadito, costumbre, campo">
     <title>LA CASA DEL MATE 🧉</title>
-    <link rel="shotcurt icon" href="../recursos/mate.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="shotcurt icon" href="recursos/mate.png"  type="image/x-icon">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 <body>
@@ -47,99 +49,100 @@
         <h1 class="colorFaq">Productos disponibles</h1>
     </div>
 
-    <div class="row container-fluid">
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/la-selva.jpg" class="card-img-top" alt="yerba mañanita">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "Mañanita"</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, neque.</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+    <div class="container-fluid">
+        <div class="row">
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/la-tranquera.jpg" class="card-img-top" alt="yerba la tranquera tradicional">
+                    <div class="card-body">
+                        <h2 class="card-title">LA TRANQUERA</h2>
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, id.</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/la-tranquera.jpg" class="card-img-top" alt="yerba la tranquera tradicional">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "La Tranquera Tradicional"</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, ipsam.</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/nobleza-gaucha.jpg" class="card-img-top" alt="Yerba nobleza gaucha tradicional">
+                    <div class="card-body">
+                        <h2 class="card-title">NOBLEZ GAUCHA</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, aspernatur.</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/nobleza-gaucha.jpg" class="card-img-top" alt="Yerba nobleza gaucha tradicional">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "Nobleza Gaucha"</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum, ab.</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/la-selva.jpg" class="card-img-top" alt="yerba mate MAÑANITA ">
+                    <div class="card-body">
+                        <h2 class="card-title">MAÑANITA</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aut?</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/picada-vieja.jpg" class="card-img-top" alt="Yerba Picada Vieja">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "Picada Vieja"</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, itaque.</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/picada-vieja.jpg" class="card-img-top" alt="Yerba Picada Vieja">
+                    <div class="card-body">
+                        <h2 class="card-title">PICADA VIEJA</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aut?</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/playadito-amarillo.jpg" class="card-img-top" alt="Yerba Playadito">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "Playadito"</h2>
-                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, placeat?</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/playadito-amarillo.jpg" class="card-img-top" alt="Yerba Playadito">
+                    <div class="card-body">
+                        <h2 class="card-title">PLAYADITO</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aut?</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
 
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/rosamonte-brillosa.jpg" class="card-img-top" alt="Yerba Rosa Monte Brillosa">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "Rosa Monte Paquete Brillosa"</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam, ea.</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/rosamonte-brillosa.jpg" class="card-img-top" alt="Yerba Rosa Monte Brillosa">
+                    <div class="card-body">
+                        <h2 class="card-title">ROSAMONTE BRILLOSA</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aut?</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/sol-y-lluvia.jpg" class="card-img-top" alt="Yerba Sol y Lluvia">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "Sol y LLuvia"</h2>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, esse.</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/sol-y-lluvia.jpg" class="card-img-top" alt="Yerba Sol y Lluvia">
+                    <div class="card-body">
+                        <h2 class="card-title">SOL Y LLUVIA</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aut?</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <div class="col-xl-3 col-md-6 col-sm-12 mt-3">
-            <div class="card">
-                <img src="../recursos/taragui-azul.jpg" class="card-img-top" alt="Yerba Taragui Sin Palo">
-                <div class="card-body">
-                    <h2 class="card-title">Yerba "Taragui Sin Palo"</h2>
-                    <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, quisquam.</p>
-                    <a href="#" class="btn colorBtn">Agregar al carrito</a>
+            <div data-aos="flip-left" class="col-xl-3 col-md-6 col-sm-12 mt-3">
+                <div class="card">
+                    <img src="../recursos/taragui-azul.jpg" class="card-img-top" alt="Yerba Taragui Sin Palo">
+                    <div class="card-body">
+                        <h2 class="card-title">TARAGUI SIN PALO</h2>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt, aut?</p>
+                        <a href="#" class="btn colorBtn">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    
     
 
     <footer class="py-3 my-O">
@@ -155,6 +158,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 </html>
