--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -6,9 +6,11 @@
     <meta name="description" content="En La Casa del Mate, somos tu principal fuente de insumos y accesorios para el mate. Descubre la rica tradición y sabor de esta emblemática bebida sudamericana con nuestra amplia selección de productos de alta calidad y la hospitalidad de una auténtica casa de mate.">
     <meta name="keywords" content="mate, argentina, uruguay,termo,yerba, bombilla, canarias, baldos, verde flor, taragui, rosamonte, playadito, costumbre, campo">
     <title>LA CASA DEL MATE 🧉</title>
-    <link rel="shotcurt icon" href="recursos/mate.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link rel="shotcurt icon" href="recursos/mate.png"  type="image/x-icon">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilo.css">
 </head>
 
@@ -47,7 +49,7 @@
     <h1 class="contacto">¡Consultanos lo que quieras!</h1>
 
     <main>
-        <div class="container-fluid col-lg-12" id="alinear">
+        <div data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000" class="container-fluid col-lg-12" id="alinear">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-sm-12 container-fluid" id="textomain">
                     <article>
@@ -104,6 +106,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
-
+    
+    <!-- AOS JS -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
