--- a/pages/Novedades.html
+++ b/pages/Novedades.html
@@ -46,40 +46,42 @@
             </nav>
         </div>
     </header>
+    <main>
 
-    <h1 class="contacto2">Suscríbete a nuestro newsletter</h1>
+        <h1 class="contacto2">Suscríbete a nuestro newsletter</h1>
+        
+        <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+            <div class="row align-items-center g-lg-5 py-5">
+                <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-lg-7 text-center text-lg-start">
+                    <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-5">Ya tenemos disponible nuestro newsletter</h1>
+                    <p class="col-lg-10 fs-4 m-auto mb-5">Si estás interesado en recibir por correo electrónico nuestras novedades, la
+                        información sobre nuestros productos y promociones, no dejes de suscribirte a nuestro boletín.
+                        Puedes hacerlo ingresando tus datos a continuación:</p>
+                </div>
+                <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-md-10 mx-auto col-lg-5">
+                    <form class="cuadroForm p-4 p-md-5 rounded-3">
+                        <div class="form-floating mb-3">
+                            <input type="name" class="form-control" id="nameAndLastname" placeholder="Nombre y apellido">
+                            <label for="nameAndLastname"> Nombre y apellido </label>
+                        </div>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <label for="floatingInput">Dirección de email</label>
+                        </div>
 
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-        <div class="row align-items-center g-lg-5 py-5">
-            <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-lg-7 text-center text-lg-start">
-                <h1 class="display-4 fw-bold lh-1 text-body-emphasis mb-5">Ya tenemos disponible nuestro newsletter</h1>
-                <p class="col-lg-10 fs-4 m-auto mb-5">Si estás interesado en recibir por correo electrónico nuestras novedades, la
-                    información sobre nuestros productos y promociones, no dejes de suscribirte a nuestro boletín.
-                    Puedes hacerlo ingresando tus datos a continuación:</p>
-            </div>
-            <div data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="col-md-10 mx-auto col-lg-5">
-                <form class="cuadroForm p-4 p-md-5 rounded-3">
-                    <div class="form-floating mb-3">
-                        <input type="name" class="form-control" id="nameAndLastname" placeholder="Nombre y apellido">
-                        <label for="nameAndLastname"> Nombre y apellido </label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                        <label for="floatingInput">Dirección de email</label>
-                    </div>
-
-                    <div class="checkbox mb-3">
-                        <label>
-                            <input type="checkbox" value="sicondiciones"> Acepto las condiciones y recibir sus
-                            newsletters. </label>
-                    </div>
-                    <button class="w-100 btn btn-lg colorBtn" type="submit">Iniciar</button>
-                    <hr class="my-4">
-                    <small class="text-body-secondary">Luego de apretar aquí usted aceptará los terminos y condiciones.</small>
-                </form>
+                        <div class="checkbox mb-3">
+                            <label>
+                                <input type="checkbox" value="sicondiciones"> Acepto las condiciones y recibir sus
+                                newsletters. </label>
+                        </div>
+                        <button class="w-100 btn btn-lg colorBtn" type="submit">Iniciar</button>
+                        <hr class="my-4">
+                        <small class="text-body-secondary">Luego de apretar aquí usted aceptará los terminos y condiciones.</small>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
     <footer class="py-3 my-O">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
