Hubo modificaciones en cada meta description, haciendo que cada pagina tenga su propia meta description

--- a/pages/Novedades.html
+++ b/pages/Novedades.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="En La Casa del Mate, somos tu principal fuente de insumos y accesorios para el mate. Descubre la rica tradición y sabor de esta emblemática bebida sudamericana con nuestra amplia selección de productos de alta calidad y la hospitalidad de una auténtica casa de mate.">
+    <meta name="description" content="En La Casa del Mate, te vas a enterar las ultimas novedades, como tambien de las diferentes promociones de nuestra tienda.">
     <meta name="keywords" content="mate, argentina, uruguay,termo,yerba, bombilla, canarias, baldos, verde flor, taragui, rosamonte, playadito, costumbre, campo">
     <title>LA CASA DEL MATE 🧉</title>
     <link rel="shotcurt icon" href="../recursos/mate.png"  type="image/x-icon">
